[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ship/components/door.gd" type="Script" id=1]
[ext_resource path="res://assets/ship/components/single_door.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.125, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.875, 7.8125 )

[node name="Sliding_Door" type="Area2D"]
script = ExtResource( 1 )
slide_speed = 75
slide_max = 16
locked = true

[node name="trigger" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.125 )
shape = SubResource( 1 )

[node name="Door_Body" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_Body"]
shape = SubResource( 2 )

[node name="door" type="Sprite" parent="Door_Body"]
texture = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Sliding_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sliding_Door_body_exited"]
